<resources>
    <string name="app_name">DaggerAndroid</string>
    <string name="title_activity">DaggerTwoElevenActivity</string>
    <string name="constructor_injected">Constructor injected.</string>
    <string name="constructor_injection_failed">Constructor-Injection failed.</string>
    <string name="module_injected">Module injected.</string>
    <string name="module_injection_failed">Module-Injection failed.</string>

    <string name="fragment_constructor_injection_failed">Constructor-Injection for fragment failed.</string>
    <string name="fragment_module_injection_failed">Module-Injection for fragment failed.</string>
    <string name="application_injected">Injected String from application-component.</string>
    <string name="application_injection_failed">Failed injection from application.</string>
    <string name="activity_module_injection_failed">Failed injecting string from parent activity.</string>
    <string name="extensible_default_string">Extensible Default-String</string>
    <string name="btn_switch">Switch to classic activity</string>
    <string name="classic_fun">Default fun</string>
    <string name="overriden_text">Injection failed.</string>
    <string name="contributed_btn2_label">Switch to Overriden-Activity</string>
</resources>
